# discotify

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
discotify/: __init__.py  discotify.py  main.py
tests/: __init__.py  test_discotify.py  test_main.py
